# VodServices

./: .gitignore  CMakeLists.txt  README.md
Include/Servlet/: AddMovieServlet.h  MovieDetailsServlet.h  MovieListServlet.h  MovieMenuServlet.h  ResourceServlet.h
Modules/: VodServices.magic
Source/: Main.cpp
Source/Servlet/: AddMovieServlet.cpp  MovieDetailsServlet.cpp  MovieListServlet.cpp  MovieMenuServlet.cpp  ResourceServlet.cpp
